--- a/style.css
+++ b/style.css
@@ -61,14 +61,17 @@ h1{
 }
 
 .recipe-item a{
-    background-color: rgb(255, 145, 0);
+    background-color: rgb(255, 175, 70);
     color: #fff;
     min-width: 150px;
     padding: 10px;
     text-decoration: none;
+    text-align: center;
     text-transform: uppercase;
     font-size: 14px;
     transition: background 0.3s ease;
+    margin-left: 5px;
+    border-radius: 5px;
 }
 
 .recipe-item a:hover{
